// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`the empty session 1`] = `
"jamcli · project · session <session>

















┌──────────────────────────────────────────────────────────────────────────────┐
│Message JamCLI. Enter sends, Shift+Enter or Ctrl+J adds a line, / lists       │
│commands.                                                                     │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
default mode · ollama:fake-model · context N% · no sandbox · ready
"
`;

exports[`a reply part-way through streaming 1`] = `
"jamcli · project · session <session>

> tell me
Here is the first part,














┌──────────────────────────────────────────────────────────────────────────────┐
│Message JamCLI. Enter sends, Shift+Enter or Ctrl+J adds a line, / lists       │
│commands.                                                                     │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
● writing · default mode · ollama:fake-model · context N% · no sandbox
"
`;

exports[`a finished tool block and the reply after it 1`] = `
"jamcli · project · session <session>

> read the notes
✓ done: read_file notes.txt, N ms
It lists alpha and beta.













┌──────────────────────────────────────────────────────────────────────────────┐
│Message JamCLI. Enter sends, Shift+Enter or Ctrl+J adds a line, / lists       │
│commands.                                                                     │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
default mode · ollama:fake-model · context N% · no sandbox · ready
"
`;

exports[`the permission prompt for a command 1`] = `
"jamcli · project · session <session>

> run the tests
? asking: run_command npm test







┌──────────────────────────────────────────────────────────────────────────────┐
│ Allow run_command npm test?                                            [Esc] │
│   npm test                                                                   │
│ Default mode asks before tools that run commands.                            │
│                                                                              │
│  1  Allow once                                                               │
│  2  Allow this session   run_command(npm test)                               │
│  3  Allow this project   run_command(npm test) · .jamcli/config.local.json   │
│  4  Deny, continue                                                           │
│  5  Deny with feedback                                                       │
│ Up/Down pattern 1/3                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
default mode · ollama:fake-model · context N% · no sandbox · waiting for you
"
`;

exports[`a diff, in the prompt for an edit 1`] = `
"jamcli · project · session <session>

> change it
? asking: edit a.txt, 1 line added and 1 removed










┌──────────────────────────────────────────────────────────────────────────────┐
│ Allow edit a.txt?                                                      [Esc] │
│  1   one                                                                     │
│  2 - two                                                                     │
│  2 + TWO                                                                     │
│  3   three                                                                   │
│ Default mode asks before tools that change files.                            │
│                                                                              │
│  1  Allow once                                                               │
│  2  Allow this session   edit(a.txt)                                         │
│  3  Allow this project   edit(a.txt) · .jamcli/config.local.json             │
│  4  Deny, continue                                                           │
│  5  Deny with feedback                                                       │
│ Up/Down pattern 1/2                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
default mode · ollama:fake-model · context N% · no sandbox · waiting for you
"
`;

exports[`screen reader mode, through a reply, a tool, and a prompt 1`] = `
"JamCLI, project project, session <session>
You: read the notes
Tool done: read_file notes.txt, N ms
JamCLI: It says alpha.
You: list
Tool asking: run_command ls













Permission needed: Allow run_command ls?                 Escape denies and stops
ls
Default mode asks before tools that run commands.

1: Allow once
2: Allow this session   run_command(ls)
3: Allow this project   run_command(ls) · .jamcli/config.local.json
4: Deny, continue
5: Deny with feedback
Up/Down pattern 1/2
Status: default mode, ollama:fake-model, context N%, no sandbox, waiting for
"
`;

exports[`NO_COLOR: the same frame, every character in the terminal's own colors 1`] = `
{
  "colors": [
    "255,767,255,255 on 0,0,0,0",
  ],
  "frame": 
"jamcli · project · session <session>

> change it
? asking: edit a.txt, 1 line added and 1 removed










┌──────────────────────────────────────────────────────────────────────────────┐
│ Allow edit a.txt?                                                      [Esc] │
│  1   one                                                                     │
│  2 - two                                                                     │
│  2 + TWO                                                                     │
│  3   three                                                                   │
│ Default mode asks before tools that change files.                            │
│                                                                              │
│  1  Allow once                                                               │
│  2  Allow this session   edit(a.txt)                                         │
│  3  Allow this project   edit(a.txt) · .jamcli/config.local.json             │
│  4  Deny, continue                                                           │
│  5  Deny with feedback                                                       │
│ Up/Down pattern 1/2                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
default mode · ollama:fake-model · context N% · no sandbox · waiting for you
"
,
}
`;

exports[`an overlay: the list, the one chosen, and how to move 1`] = `
"jamcli · project · session <session>

> /theme




┌──────────────────────────────────────────────────────────────────────────────┐
│ Themes                                                                 [Esc] │
│ Filter: type to narrow the list                                              │
│                                                                              │
│ > dark (in use)  light text on a dark background                             │
│   light          dark text on a light background                             │
│   high-contrast  the brightest colors, for low vision or bright rooms        │
│   monochrome     no color at all; every state is still a word                │
│                                                                              │
│ Enter uses it and saves it · Up/Down move, or click                          │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Message JamCLI. Enter sends, Shift+Enter or Ctrl+J adds a line, / lists       │
│commands.                                                                     │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
default mode · ollama:fake-model · context N% · no sandbox · ready
"
`;
